# synapse-xmpp-svn

main/synapse-im/: CMakeLists.txt  Doxyfile  Makefile  README  conf.pri  conf_windows.pri  configure  configure-jingle  iconsets.qrc  psi-jingle.qc  psi.kdevelop  psi.kdevses  psi.pro  psi.qc  synapse-im.desktop
main/synapse-im/cmake/modules/: FindOpenSSL.cmake  FindQt4.cmake  FindSpeex.cmake
main/synapse-im/cutestuff/: CMakeLists.txt
main/synapse-im/cutestuff/network/: bsocket.cpp  bsocket.h  httpconnect.cpp  httppoll.cpp  socks.cpp
main/synapse-im/cutestuff/util/: bytestream.cpp  bytestream.h
main/synapse-im/iconsets/certs/: chrome.pem
main/synapse-im/iconsets/roster/default/: icondef.xml
main/synapse-im/iris/: CMakeLinks.txt  CMakeLists.txt
main/synapse-im/iris/include/: im.h  xmpp.h  xmpp_client.h  xmpp_liverosteritem.h  xmpp_message.h  xmpp_rosteritem.h
main/synapse-im/iris/irisnet/: CMakeLists.txt
main/synapse-im/iris/irisnet/jdns/: CMakeLists.txt
main/synapse-im/iris/jabber/: filetransfer.cpp  s5b.cpp  s5b.h  xmpp_ibb.cpp  xmpp_ibb.h
main/synapse-im/iris/linklocal/: linklocal.cpp  linklocal.h  linklocal_stream.cpp
main/synapse-im/iris/linklocal/avahi/: AddressResolver.xml  EntryGroup.xml  HostNameResolver.xml  Server.xml  ServiceResolver.xml  avahi_entrygroup.cpp  avahi_entrygroup.h  avahi_server.cpp  avahi_server.h  avahi_serviceresolver.cpp
main/synapse-im/iris/upnp/: upnp.cpp  upnp.h  upnp_device.cpp  upnp_device.h  upnp_port.cpp  upnp_port.h
main/synapse-im/iris/xmpp-core/: connector.cpp  parser.cpp  protocol.cpp  protocol.h  securestream.cpp  simplesasl.cpp  stream.cpp  xmlprotocol.cpp  xmlprotocol.h
main/synapse-im/iris/xmpp-im/: client.cpp  types.cpp  xmpp_task.cpp  xmpp_tasks.cpp  xmpp_tasks.h  xmpp_vcard.cpp  xmpp_xdata.cpp  xmpp_xmlcommon.cpp
main/synapse-im/lang/: synapse-im_pl.qm  synapse-im_pl.ts
main/synapse-im/mac/: Makefile
main/synapse-im/options/: default.xml  newprofile.xml
main/synapse-im/qcm/: dbus.qcm  jingle.qcm
main/synapse-im/src/: CMakeLists.txt  Doxyfile  Makefile  about.ui  aboutdlg.cpp  accountmodify.ui  accountmodifydlg.cpp  accountmodifydlg.h  activeprofiles_win.cpp  adduserdlg.cpp  ahc_plugin.cpp  ahc_plugin.h  antievil.cpp  antievil.h  applicationinfo.cpp  avatars.cpp  avatars.h  chatdlg.cpp  chatdlg.h  chatdlg.ui  chattoolbox.cpp  chattoolbox.h  common.h  config.h  contactview.cpp  contactview.h  dbus.cpp  dbus.h  disco.ui  discodlg.cpp  entitytimetask.cpp  eventdb.cpp  eventdlg.cpp  eventdlg.h  filetransdlg.cpp  filetransdlg.h  garchive.cpp  garchive.h  geolocation.cpp  geolocation.h  (+68 more)
main/synapse-im/src/SIMContactList/: Account.cpp  Account.h  CMakeLists.txt  Contact.cpp  Contact.h  Delegate.cpp  Delegate.h  Group.cpp  Group.h  Item.cpp  Item.h  List.cpp  List.h  Meta.cpp  Meta.h  Model.cpp  Model.h  Name.cpp  Name.h  SIMContactDelegate.cpp  SIMContactDelegate.h  SIMContactList.cpp  SIMContactList.h  SIMContactListAccount.cpp  SIMContactListAccount.h  SIMContactListContact.cpp  SIMContactListContact.h  SIMContactListGroup.cpp  SIMContactListGroup.h  SIMContactListItem.cpp  SIMContactListItem.h  SIMContactListMeta.cpp  SIMContactListMeta.h  SIMContactListModel.cpp  SIMContactListModel.h  SIMContactListView.cpp  SIMContactListView.h  SIMContactName.cpp  SIMContactName.h  View.cpp  (+1 more)
main/synapse-im/src/archiving/: CMakeLists.txt  archivedlg.cpp  archivedlg.h  archivedlg.ui  getcollectionlisttask.cpp  getcollectionlisttask.h  getcollectiontask.cpp  getcollectiontask.h
main/synapse-im/src/capabilities/: CMakeLists.txt
main/synapse-im/src/chat/: chatcontact.ui
main/synapse-im/src/irisprotocol/: CMakeLists.txt
main/synapse-im/src/jingle/: CMakeLists.txt  codec.h  jinglesessionmanager.cpp  jinglesessionmanager.h  jinglevoicesession.cpp  jinglevoicesession.h  mediastream.cpp  mediastream.h  session.h  stun.cpp  transport.cpp  transport.h  voicecodec.cpp  voicecodec.h  voicesession.h
main/synapse-im/src/jingle/codecs/: ilbccodec.cpp  speexcodec.cpp  speexcodec.h  speexcodecwb.cpp
main/synapse-im/src/jingle/portaudio/: pa_win_wmme.c.orig
main/synapse-im/src/options/: CMakeLists.txt  opt_advanced.cpp  opt_advanced.ui  opt_antievil.cpp  opt_antievil.h  opt_antievil.ui  opt_appearance.cpp  opt_appearance.h  opt_appearance.ui  opt_appearance_misc.ui  opt_application.cpp  opt_application.ui  opt_chat.cpp  opt_chat.ui  opt_events.cpp  opt_events.h  opt_events.ui  opt_history.cpp  opt_history.h  opt_history.ui  opt_iconset.cpp  opt_iconset_emo.ui  opt_shortcuts.cpp  opt_sound.cpp  opt_status.cpp  opt_toolbars.cpp  optionsdlg.cpp  optionstab.cpp  ui_positiontoolbar.ui
main/synapse-im/src/plugins/: CMakeLists.txt
main/synapse-im/src/plugins/core/: CMakeLists.txt  coreinterface.h
main/synapse-im/src/plugins/generic/: CMakeLists.txt
main/synapse-im/src/privacy/: CMakeLists.txt  psiprivacymanager.cpp  psiprivacymanager.h
main/synapse-im/src/protocol/: CMakeLists.txt
main/synapse-im/src/sxe/: sxemanager.cpp
main/synapse-im/src/tabs/: CMakeLists.txt  tabbablewidget.cpp  tabbablewidget.h  tabdlg.cpp  tabmanager.cpp
main/synapse-im/src/tools/: CMakeLists.txt
main/synapse-im/src/tools/advwidget/: CMakeLists.txt
main/synapse-im/src/tools/atomicxmlfile/: CMakeLists.txt
main/synapse-im/src/tools/contactlist/: CMakeLists.txt  contactlistview.cpp
main/synapse-im/src/tools/globalshortcut/: CMakeLists.txt  globalshortcutmanager.cpp
main/synapse-im/src/tools/grepshortcutkeydlg/: CMakeLists.txt
main/synapse-im/src/tools/iconset/: CMakeLists.txt
main/synapse-im/src/tools/idle/: CMakeLists.txt
main/synapse-im/src/tools/mapcontrol/: CMakeLists.txt  layer.cpp  layer.h  layermanager.cpp  mapcontrol.cpp  (+1 more)
main/synapse-im/src/utilities/: CMakeLists.txt
main/synapse-im/src/widgets/: CMakeLists.txt  busywidget.cpp  busywidget.h  fancypopup.cpp  fancypopup.h  hoverlabel.cpp  hoverlabel.h  iconaction.cpp  iconselect.cpp  iconselect.h  psirichlabel.cpp  psirichlabel.h  psitabwidget.cpp  psitabwidget.h  psitextview.h  psitooltip.cpp  widgets.pri
main/synapse-im/win32/: Makefile  psi_win32.rc
(+48 files in other folders)
