# Ad-hoc Commands && Remote Control PLugin - CoreInterface

ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT3_SUPPORT)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

INCLUDE_DIRECTORIES(
	../
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
)

SET(AHC_SRCS 
	ahcservermanager.cpp
)

SET(AHC_NOMOC_SRCS
	ahcexecutetask.cpp
	ahcformdlg.cpp
	ahcommand.cpp
 	ahcommandserver.cpp
	ahc_plugin.cpp
	rc.cpp
)
MY_AUTOMOC( AHC_SRCS )

ADD_LIBRARY(ahc SHARED ${AHC_SRCS} ${AHC_NOMOC_SRCS})

TARGET_LINK_LIBRARIES(ahc ${QT_QTCORE_LIBRARY})
TARGET_LINK_LIBRARIES(ahc iris)

INSTALL(TARGETS ahc DESTINATION ${QT_PLUGINS_DIR}/synapse-im)
