# GMailPLugin - CoreInterface

ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT3_SUPPORT)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

INCLUDE_DIRECTORIES(
	../
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
)

SET(GARCHIVE_PLUGIN_SRCS 
	garchive.cpp
	garchive_otr.cpp
)


MY_AUTOMOC( GARCHIVE_PLUGIN_SRCS )

ADD_LIBRARY(google_archive SHARED ${GARCHIVE_PLUGIN_SRCS})

TARGET_LINK_LIBRARIES(google_archive ${QT_QTCORE_LIBRARY})
TARGET_LINK_LIBRARIES(google_archive iris)

INSTALL(TARGETS google_archive DESTINATION ${QT_PLUGINS_DIR}/synapse-im)
